added simple donation integration on sandbox server

--- a/public_html/css/colour.less
+++ b/public_html/css/colour.less
@@ -1,6 +1,8 @@
 @blue-sky : #7ecdec;
 @green-grass : #68934f;
+
 @yellow-daisy : #ffc708;
+@yellow : #FFDE00;
 @cream : #ece196;
 
 @sage : #c3d4b9;
