--- a/public_html/css/donateadaisy.css
+++ b/public_html/css/donateadaisy.css
@@ -737,13 +737,16 @@ body strong em {
   /* Custom Cursor Base 64 Encoded */
 }
 #daisyChainMaster #daisyChainContainer #daisyChain {
-  padding: 0 0 0px 387px;
+  padding: 0 0 0px 195px;
   margin: 10px 0 0 65px ;
   opacity: 0;
   left: 100%;
   list-style-type: none;
   position: absolute;
   white-space: nowrap;
+  color: #fff;
+  font-family: 'robotolight', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 12px;
   /* Prevent elements to be highlighted on tap */
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   /* Put the scroller into the HW Compositing layer right from the start */
@@ -775,9 +778,6 @@ body strong em {
 }
 #daisyChainMaster #daisyChainContainer #daisyChain > li .daisyInfo {
   background: url('../img/daisy-shadow.png') no-repeat center center;
-  color: #fff;
-  font-family: 'robotolight', Arial, 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 12px;
   left: -5px;
   position: absolute;
   text-align: center;
@@ -928,10 +928,38 @@ body strong em {
   background-size: 10px 10px;
   font-size: 12px;
   color: #68934f;
-  left: 23px;
+  left: 30px;
   position: absolute;
   text-decoration: none;
-  top: 160px;
+  top: 180px;
+  width: 85px;
+  text-align: center;
+}
+#daisyChainMaster #daisyChainContainer #daisyChain li.add .pill.redirect {
+  background-image: none;
+}
+#daisyChainMaster #daisyChainContainer #daisyChain li.add .pill.redirect:after {
+  background: none repeat scroll 0 0 #ffde00;
+  border: 1px solid #68934f;
+  border-radius: 30px;
+  content: attr(data-content);
+  display: block;
+  line-height: 19px;
+  position: absolute;
+  right: -1px;
+  text-align: center;
+  top: 0;
+  width: 19px;
+}
+#daisyChainMaster #daisyChainContainer #daisyChain li.add #redirectMessage {
+  bottom: -27px;
+  display: block;
+  left: -20px;
+  position: absolute;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: normal;
+  width: 235px;
 }
 #daisyChainMaster #rearChainContainer {
   height: 60px;
