--- a/public_html/css/main.less
+++ b/public_html/css/main.less
@@ -459,7 +459,7 @@ body {
 		
 	    #daisyChain{
 
-	    	padding: 0 0 0px 387px; // (130 + 322) 452px to centre   - 65px
+	    	padding: 0 0 0px 195px; // (130 + 130) 260px   - 65px
 	    	margin: 10px 0 0 65px ; //push last daisy off the screen by half its width
 	    	opacity : 0;
 	    	left: 100%;
@@ -467,7 +467,11 @@ body {
 	    	list-style-type: none;
 	    	position: absolute;
 	    	white-space: nowrap;
-	    	//overflow: hidden;
+
+	    	color: #fff;
+			font-family: @fontface-roboto-light;
+			font-size: 12px;
+
 	    	/* Prevent elements to be highlighted on tap */
 			-webkit-tap-highlight-color: rgba(0,0,0,0);
 			/* Put the scroller into the HW Compositing layer right from the start */
@@ -505,9 +509,7 @@ body {
 	    		.daisyInfo {
 
 					background: url('@{img-path}daisy-shadow.png') no-repeat center center;
-					color: #fff;
-					font-family: @fontface-roboto-light;
-					font-size: 12px;
+					
 					left: -5px;
 					position: absolute;
 					text-align: center;
@@ -698,10 +700,44 @@ body {
 				    background-size: 10px 10px;
 					font-size: 12px;
 				    color: @green-grass;
-				    left: 23px;
+				    left: 30px;
 				    position: absolute;
 				    text-decoration: none;
-				    top: 160px;
+				    top: 180px;
+				    width: 85px;
+				    text-align: center;
+
+				    &.redirect {
+				    	background-image : none;
+
+				    	&:after{
+
+				    		background: none repeat scroll 0 0 @yellow;
+						    border: 1px solid @green-grass;
+						    border-radius: 30px;
+						    content: attr(data-content);
+						    display: block;
+						    line-height: 19px;
+						    position: absolute;
+						    right: -1px;
+						    text-align: center;
+						    top: 0;
+						    width: 19px;
+
+				    	}
+				    }
+				}
+
+				#redirectMessage {
+
+				    bottom: -27px;
+				    display: block;
+				    left: -20px;
+				    position: absolute;
+				    text-align: center;
+				    text-transform: uppercase;
+				    white-space: normal;
+				    width: 235px;
 				}
     		}
 	    }
@@ -996,7 +1032,6 @@ body {
 }
 
 /* ---------- Social Popup ----------- */
-
 
 @-webkit-keyframes loading {
 
